--- a/css/styles.css
+++ b/css/styles.css
@@ -176,6 +176,8 @@ img{
     margin-bottom: 2rem;
 
     text-transform: uppercase;
+
+    border: none;
 }
 
 @media (min-width: 1080px) {
@@ -183,6 +185,10 @@ img{
         display: inline-block; /* Para poder agregar margin*/
         margin-bottom: 2rem;
     }
+}
+
+.boton:hover{
+    cursor: pointer;
 }
 
 .boton--primario{
@@ -283,4 +289,33 @@ footer{
     height: 40rem;
     background-size: cover;
     background-repeat: no-repeat;
+}
+
+/** Formulario **/
+
+.formulario{
+    background-color: var(--blanco);
+    margin: -5rem auto 0 auto;
+    width: 95%;
+    padding: 3rem;
+}
+
+.campo{
+    display: flex;
+    margin-bottom: 2rem;
+}
+
+.campo__label{
+    flex: 0 0 9rem;
+    text-align: right;
+    padding-right: 2rem;
+}
+
+.campo__field{
+    flex: 1;
+    border: 1px solid var(--gris);
+}
+
+.campo__field--textarea{
+    height: 20rem;
 }
